pkg/main/default/objects/Envelope__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <description>Email Message</description>
    <inlineHelpText>Edit this email message Text (up to 2,000 characters) and it will appear in the notification to sign for
			your DocuSign Recipient.
		</inlineHelpText>
    <label>Email message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>