pkg/main/default/objects/Envelope__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <defaultValue>&quot;Documents for your DocuSign Signature&quot;</defaultValue>
    <description>Email Subject</description>
    <inlineHelpText>Change this default email subject text and it will appear as the Subject Line in the notification to Sign
			for your DocuSign Recipients.
		</inlineHelpText>
    <label>Email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>