pkg/main/default/objects/Envelope__c/fields/EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The configuration used to generate this envelope.</inlineHelpText>
    <label>Envelope Configuration</label>
    <referenceTo>EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>Envelope Configuration</relationshipLabel>
    <relationshipName>EnvelopeConfiguration</relationshipName>
    <type>Lookup</type>
</CustomField>