pkg/main/default/objects/Envelope__c/fields/ExpireAfterDays__c.field-meta.xml
<CustomField>
    <fullName>ExpireAfterDays__c</fullName>
    <description>Days before Envelope is Expired/Voided</description>
    <inlineHelpText>Indicate the number of days until this transaction is expired.</inlineHelpText>
    <label>Expire/void envelope in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>