pkg/main/default/objects/Envelope__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign voids the envelope and sends a notification to both sender and recipient.</description>
    <inlineHelpText>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign voids the envelope and sends a notification to both sender and recipient.</inlineHelpText>
    <label>Expire envelope</label>
    <type>Checkbox</type>
</CustomField>