pkg/main/default/objects/Envelope__c/fields/Remind__c.field-meta.xml
<CustomField>
    <fullName>Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should a reminder be sent periodically to recipients
			who have not yet completed the envelope?</description>
    <inlineHelpText>Check this box to have an email reminder sent to recipients of the envelope who have not yet completed
			their task.
		</inlineHelpText>
    <label>Remind signers via email</label>
    <type>Checkbox</type>
</CustomField>