pkg/main/default/objects/Envelope__c/fields/RemindFrequencyDays__c.field-meta.xml
<CustomField>
    <fullName>RemindFrequencyDays__c</fullName>
    <description>Reminder Repeat Interval in Days to remind them
			to review and complete the document(s).</description>
    <inlineHelpText>Indicate how often (in days) the reminder should repeat until the transaction is complete.</inlineHelpText>
    <label>Remind every N day(s) until complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>