pkg/main/default/objects/Envelope__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <description>Date and time when envelope was sent</description>
    <inlineHelpText>Date and time sent</inlineHelpText>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>