pkg/main/default/objects/Envelope__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>Salesforce source ID</description>
    <inlineHelpText>Salesforce source ID</inlineHelpText>
    <label>Salesforce source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>