pkg/main/default/objects/Envelope__c/fields/UpdateChatter__c.field-meta.xml
<CustomField>
    <fullName>UpdateChatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to show chatter during DocuSign signature workflow.</inlineHelpText>
    <label>Enable Chatter status updates</label>
    <type>Checkbox</type>
</CustomField>